新增群发消息SDK基础能力和测试方法

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -28,3 +28,15 @@ weixin.kfaccount.uploadheadimg=http://api.weixin.qq.com/customservice/kfaccount/
 weixin.kfaccount.getkflist=https://api.weixin.qq.com/cgi-bin/customservice/getkflist
 #上传图文消息内的图片获取URL
 weixin.group.uploadimg=https://api.weixin.qq.com/cgi-bin/media/uploadimg
+#上传多媒体文件
+weixin.base.upload=https://api.weixin.qq.com/cgi-bin/media/upload
+#上传多媒体文件
+weixin.base.upload.file=http://file.api.weixin.qq.com/cgi-bin/media/upload
+#下载多媒体文件
+weixin.base.download.file=http://file.api.weixin.qq.com/cgi-bin/media/get
+#上传图文消息素材
+weixin.media.news.upload=https://api.weixin.qq.com/cgi-bin/media/uploadnews
+#上传视频素材
+weixin.media.video.upload=https://file.api.weixin.qq.com/cgi-bin/media/uploadvideo
+#根据标签进行群发
+weixin.mass_sendall =https://api.weixin.qq.com/cgi-bin/message/mass/sendall
