新增根据OpenId群发视频和微信卡券能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -40,3 +40,5 @@ weixin.media.news.upload=https://api.weixin.qq.com/cgi-bin/media/uploadnews
 weixin.media.video.upload=https://file.api.weixin.qq.com/cgi-bin/media/uploadvideo
 #根据标签进行群发
 weixin.mass_sendall =https://api.weixin.qq.com/cgi-bin/message/mass/sendall
+#根据OpenId列表群发
+weixin.mass.send=https://api.weixin.qq.com/cgi-bin/message/mass/send
