整理包结构

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -42,3 +42,5 @@ weixin.media.video.upload=https://file.api.weixin.qq.com/cgi-bin/media/uploadvid
 weixin.mass_sendall =https://api.weixin.qq.com/cgi-bin/message/mass/sendall
 #根据OpenId列表群发
 weixin.mass.send=https://api.weixin.qq.com/cgi-bin/message/mass/send
+#删除群发
+weixin.mass.delete=https://api.weixin.qq.com/cgi-bin/message/mass/delete
