新增预览、删除群发消息，并提供基础测试方法

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -44,3 +44,7 @@ weixin.mass_sendall =https://api.weixin.qq.com/cgi-bin/message/mass/sendall
 weixin.mass.send=https://api.weixin.qq.com/cgi-bin/message/mass/send
 #删除群发
 weixin.mass.delete=https://api.weixin.qq.com/cgi-bin/message/mass/delete
+#预览群发
+weixin.mass.preview=https://api.weixin.qq.com/cgi-bin/message/mass/preview
+#查询群发消息发送状态
+wexin.mass.get=https://api.weixin.qq.com/cgi-bin/message/mass/get
