新增获取微信群发速度和设置微信群发速度基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -48,3 +48,7 @@ weixin.mass.delete=https://api.weixin.qq.com/cgi-bin/message/mass/delete
 weixin.mass.preview=https://api.weixin.qq.com/cgi-bin/message/mass/preview
 #查询群发消息发送状态
 wexin.mass.get=https://api.weixin.qq.com/cgi-bin/message/mass/get
+#获取群发速度
+weixin.mass.speed.get=https://api.weixin.qq.com/cgi-bin/message/mass/speed/get
+#设置群发速度
+weixin.mass.speed.set=https://api.weixin.qq.com/cgi-bin/message/mass/speed/set
