新增发送模板消息基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -52,3 +52,15 @@ wexin.mass.get=https://api.weixin.qq.com/cgi-bin/message/mass/get
 weixin.mass.speed.get=https://api.weixin.qq.com/cgi-bin/message/mass/speed/get
 #设置群发速度
 weixin.mass.speed.set=https://api.weixin.qq.com/cgi-bin/message/mass/speed/set
+#设置所属行业
+weixin.template.industry.set=https://api.weixin.qq.com/cgi-bin/template/api_set_industry
+#获取所属行业
+weixin.template.industry.get=https://api.weixin.qq.com/cgi-bin/template/get_industry
+#获得模板ID
+weixin.template.id.get=https://api.weixin.qq.com/cgi-bin/template/api_add_template
+#获取模板列表
+weixin.template.all.get=https://api.weixin.qq.com/cgi-bin/template/get_all_private_template
+#删除模板
+weixin.temmplate.id.delete=https://api.weixin.qq.com/cgi-bin/template/del_private_template
+#发送模板消息
+weixin.template.send=https://api.weixin.qq.com/cgi-bin/message/template/send
