--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -64,3 +64,5 @@ weixin.template.all.get=https://api.weixin.qq.com/cgi-bin/template/get_all_priva
 weixin.temmplate.id.delete=https://api.weixin.qq.com/cgi-bin/template/del_private_template
 #发送模板消息
 weixin.template.send=https://api.weixin.qq.com/cgi-bin/message/template/send
+#一次性订阅消息,通过API推送订阅模板消息给到授权微信用户
+weixin.template.subscribe=https://api.weixin.qq.com/cgi-bin/message/template/subscribe
