新增API调用次数清零基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -66,3 +66,6 @@ weixin.temmplate.id.delete=https://api.weixin.qq.com/cgi-bin/template/del_privat
 weixin.template.send=https://api.weixin.qq.com/cgi-bin/message/template/send
 #一次性订阅消息,通过API推送订阅模板消息给到授权微信用户
 weixin.template.subscribe=https://api.weixin.qq.com/cgi-bin/message/template/subscribe
+#API调用次数清零
+weixin.quota.clear=https://api.weixin.qq.com/cgi-bin/clear_quota
+
