新增获取公众号的自动回复规则基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -68,4 +68,5 @@ weixin.template.send=https://api.weixin.qq.com/cgi-bin/message/template/send
 weixin.template.subscribe=https://api.weixin.qq.com/cgi-bin/message/template/subscribe
 #API调用次数清零
 weixin.quota.clear=https://api.weixin.qq.com/cgi-bin/clear_quota
-
+#获取公众号的自动回复规则
+weixin.autoreply.info=https://api.weixin.qq.com/cgi-bin/get_current_autoreply_info
