新增网页授权获取用户基本信息基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -70,3 +70,11 @@ weixin.template.subscribe=https://api.weixin.qq.com/cgi-bin/message/template/sub
 weixin.quota.clear=https://api.weixin.qq.com/cgi-bin/clear_quota
 #获取公众号的自动回复规则
 weixin.autoreply.info=https://api.weixin.qq.com/cgi-bin/get_current_autoreply_info
+#通过code换取网页授权access_token
+weixin.oauth2.token=https://api.weixin.qq.com/sns/oauth2/access_token
+#刷新access_token
+weixin.oauth2.refresh=https://api.weixin.qq.com/sns/oauth2/refresh_token
+#拉取用户信息
+weixin.oauth2.user.get=https://api.weixin.qq.com/sns/userinfo
+#检验授权凭证（access_token）是否有效
+weixin.oauth2.token.auth=https://api.weixin.qq.com/sns/auth
