新增素材管理基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -78,3 +78,21 @@ weixin.oauth2.refresh=https://api.weixin.qq.com/sns/oauth2/refresh_token
 weixin.oauth2.user.get=https://api.weixin.qq.com/sns/userinfo
 #检验授权凭证（access_token）是否有效
 weixin.oauth2.token.auth=https://api.weixin.qq.com/sns/auth
+#获取临时素材
+weixin.media.get=https://api.weixin.qq.com/cgi-bin/media/get
+#高清语音素材获取接口
+weixin.media.jssdk.get=https://api.weixin.qq.com/cgi-bin/media/get/jssdk
+#新增永久素材
+weixin.media.news.add=https://api.weixin.qq.com/cgi-bin/material/add_news
+#新增其他类型永久素材
+weixin.media.material.add=https://api.weixin.qq.com/cgi-bin/material/add_material
+#获取永久素材
+weixin.media.material.get=https://api.weixin.qq.com/cgi-bin/material/get_material
+#删除永久素材
+weixin.media.materail.delete=https://api.weixin.qq.com/cgi-bin/material/del_material
+#修改永久图文素材
+weixin.media.materail.update=https://api.weixin.qq.com/cgi-bin/material/update_news
+#获取素材总数
+weixin.media.materail.count=https://api.weixin.qq.com/cgi-bin/material/get_materialcount
+#获取素材列表
+weixin.media.materail.batch.get=https://api.weixin.qq.com/cgi-bin/material/batchget_material
