新增图文消息留言管理基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -96,3 +96,19 @@ weixin.media.materail.update=https://api.weixin.qq.com/cgi-bin/material/update_n
 weixin.media.materail.count=https://api.weixin.qq.com/cgi-bin/material/get_materialcount
 #获取素材列表
 weixin.media.materail.batch.get=https://api.weixin.qq.com/cgi-bin/material/batchget_material
+#打开已群发文章评论
+weixin.comment.open=https://api.weixin.qq.com/cgi-bin/comment/open
+#关闭已群发文章评论
+weixin.comment.close=https://api.weixin.qq.com/cgi-bin/comment/close
+#查看指定文章的评论数据
+weixin.comment.list=https://api.weixin.qq.com/cgi-bin/comment/list
+#将评论标记精选
+weixin.comment.markelect=https://api.weixin.qq.com/cgi-bin/comment/markelect
+#将评论取消精选
+weixin.comment.unmarkelect=https://api.weixin.qq.com/cgi-bin/comment/unmarkelect
+#删除评论
+weixin.comment.delete=https://api.weixin.qq.com/cgi-bin/comment/delete
+#回复评论
+weixin.comment.reply=https://api.weixin.qq.com/cgi-bin/comment/reply/add
+#删除回复
+weixin.comment.reply.delete=https://api.weixin.qq.com/cgi-bin/comment/reply/delete
