新增用户管理基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -114,3 +114,31 @@ weixin.comment.reply=https://api.weixin.qq.com/cgi-bin/comment/reply/add
 weixin.comment.reply.delete=https://api.weixin.qq.com/cgi-bin/comment/reply/delete
 #创建标签
 weixin.tag.create=https://api.weixin.qq.com/cgi-bin/tags/create
+#获取已创建的标签
+weixin.tag.get=https://api.weixin.qq.com/cgi-bin/tags/get
+#编辑标签
+weixin.tag.update=https://api.weixin.qq.com/cgi-bin/tags/update
+#删除标签
+weixin.tag.delete=https://api.weixin.qq.com/cgi-bin/tags/delete
+#获取标签下粉丝列表
+weixin.tag.user.get=https://api.weixin.qq.com/cgi-bin/user/tag/get
+#批量为用户打标签
+weixin.tag.batchtagging=https://api.weixin.qq.com/cgi-bin/tags/members/batchtagging
+#批量为用户取消标签
+weixin.tag.batchtunagging=https://api.weixin.qq.com/cgi-bin/tags/members/batchuntagging
+#获取用户身上的标签列表
+weixin.tag.get.list=https://api.weixin.qq.com/cgi-bin/tags/getidlist
+#设置用户备注名
+weixin.user.info.updateremark=https://api.weixin.qq.com/cgi-bin/user/info/updateremark
+#获取用户基本信息（包括UnionID机制）
+weixin.user.info=https://api.weixin.qq.com/cgi-bin/user/info
+#批量获取用户基本信息
+weixin.user.batchget=https://api.weixin.qq.com/cgi-bin/user/info/batchget
+#获取用户列表
+weixin.user.get=https://api.weixin.qq.com/cgi-bin/user/get
+#获取公众号的黑名单列表
+weixin.user.black.list=https://api.weixin.qq.com/cgi-bin/tags/members/getblacklist
+#拉黑用户
+weixin.user.black.batchblacklist=https://api.weixin.qq.com/cgi-bin/tags/members/batchblacklist
+#取消拉黑用户
+weixin.user.black.batchunblacklist=https://api.weixin.qq.com/cgi-bin/tags/members/batchunblacklist
