新增生成二维码基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -142,3 +142,7 @@ weixin.user.black.list=https://api.weixin.qq.com/cgi-bin/tags/members/getblackli
 weixin.user.black.batchblacklist=https://api.weixin.qq.com/cgi-bin/tags/members/batchblacklist
 #取消拉黑用户
 weixin.user.black.batchunblacklist=https://api.weixin.qq.com/cgi-bin/tags/members/batchunblacklist
+#二维码请求
+weixin.qrcode.create=https://api.weixin.qq.com/cgi-bin/qrcode/create
+#通过ticket换取二维码
+weixin.qrcode.show=https://mp.weixin.qq.com/cgi-bin/showqrcode
