新增生成短连接基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -146,3 +146,5 @@ weixin.user.black.batchunblacklist=https://api.weixin.qq.com/cgi-bin/tags/member
 weixin.qrcode.create=https://api.weixin.qq.com/cgi-bin/qrcode/create
 #通过ticket换取二维码
 weixin.qrcode.show=https://mp.weixin.qq.com/cgi-bin/showqrcode
+#生成短连接
+weixin.shorturl=https://api.weixin.qq.com/cgi-bin/shorturl
