新增数据统计-用户分析基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -148,3 +148,8 @@ weixin.qrcode.create=https://api.weixin.qq.com/cgi-bin/qrcode/create
 weixin.qrcode.show=https://mp.weixin.qq.com/cgi-bin/showqrcode
 #生成短连接
 weixin.shorturl=https://api.weixin.qq.com/cgi-bin/shorturl
+#获取用户增减数据
+weixin.datacube.getusersummary=https://api.weixin.qq.com/datacube/getusersummary
+#获取累计用户数据
+weixin.datacube.getusercumulate=https://api.weixin.qq.com/datacube/getusercumulate
+
