新增图文分析数据接口基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -152,4 +152,15 @@ weixin.shorturl=https://api.weixin.qq.com/cgi-bin/shorturl
 weixin.datacube.getusersummary=https://api.weixin.qq.com/datacube/getusersummary
 #获取累计用户数据
 weixin.datacube.getusercumulate=https://api.weixin.qq.com/datacube/getusercumulate
-
+#获取图文群发每日数据
+weixin.news.article.summary=https://api.weixin.qq.com/datacube/getarticlesummary
+#获取图文群发总数据
+weixin.news.article.total=https://api.weixin.qq.com/datacube/getarticletotal
+#获取图文统计数据
+weixin.news.user.read=https://api.weixin.qq.com/datacube/getuserread
+#获取图文统计分时数据
+weixin.news.user.read.hour=https://api.weixin.qq.com/datacube/getuserreadhour
+#获取图文分享转发数据
+weixin.news.user.share=https://api.weixin.qq.com/datacube/getusershare
+#获取图文分享转发分时数据
+weixin.news.user.share.hour=https://api.weixin.qq.com/datacube/getusersharehour
