新增消息分析数据接口基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -164,3 +164,5 @@ weixin.news.user.read.hour=https://api.weixin.qq.com/datacube/getuserreadhour
 weixin.news.user.share=https://api.weixin.qq.com/datacube/getusershare
 #获取图文分享转发分时数据
 weixin.news.user.share.hour=https://api.weixin.qq.com/datacube/getusersharehour
+#获取消息发送概况数据
+weixin.msg.upstream.msg=https://api.weixin.qq.com/datacube/getupstreammsg
