新增消息分析数据接口基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -166,3 +166,15 @@ weixin.news.user.share=https://api.weixin.qq.com/datacube/getusershare
 weixin.news.user.share.hour=https://api.weixin.qq.com/datacube/getusersharehour
 #获取消息发送概况数据
 weixin.msg.upstream.msg=https://api.weixin.qq.com/datacube/getupstreammsg
+#获取消息分送分时数据
+weixin.msg.upstream.msg.hour=https://api.weixin.qq.com/datacube/getupstreammsghour
+#获取消息发送周数据
+weixin.msg.upstream.msg.week=https://api.weixin.qq.com/datacube/getupstreammsgweek
+#获取消息发送月数据
+weixin.msg.upstream.msg.month=https://api.weixin.qq.com/datacube/getupstreammsgmonth
+#获取消息发送分布数据
+weixin.msg.upstream.dist=https://api.weixin.qq.com/datacube/getupstreammsgdist
+#获取消息发送分布周数据
+weixin.msg.upstream.dist.week=https://api.weixin.qq.com/datacube/getupstreammsgdistweek
+#获取消息发送分布月数据
+weixin.msg.upstream.dist.month=https://api.weixin.qq.com/datacube/getupstreammsgdistmonth
