新增消息分析数据接口基础能力

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -178,3 +178,5 @@ weixin.msg.upstream.dist=https://api.weixin.qq.com/datacube/getupstreammsgdist
 weixin.msg.upstream.dist.week=https://api.weixin.qq.com/datacube/getupstreammsgdistweek
 #获取消息发送分布月数据
 weixin.msg.upstream.dist.month=https://api.weixin.qq.com/datacube/getupstreammsgdistmonth
+#获取接口分析数据
+weixin.api.analysis.summary=https://api.weixin.qq.com/datacube/getinterfacesummary
