--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -180,3 +180,5 @@ weixin.msg.upstream.dist.week=https://api.weixin.qq.com/datacube/getupstreammsgd
 weixin.msg.upstream.dist.month=https://api.weixin.qq.com/datacube/getupstreammsgdistmonth
 #获取接口分析数据
 weixin.api.analysis.summary=https://api.weixin.qq.com/datacube/getinterfacesummary
+#获取接口分析分时数据
+weixin.api.analysis.summary.hour=https://api.weixin.qq.com/datacube/getinterfacesummaryhour
