新增缓存集群配置信息

--- a/mykit-wechat-cache/src/main/resources/redis.properties
+++ b/mykit-wechat-cache/src/main/resources/redis.properties
@@ -1,8 +1,50 @@
-redis.host=127.0.0.1
-redis.port=6379
+redis.host=10.2.2.231
+redis.port=7001
 redis.max_idle=200
 redis.max_wait=10000
 redis.max_total=1024
 redis.timeout=10000
 redis.test_on_borrow=true
 
+#Redis集群模式
+redis.cluster.password=
+redis.cluster.max.total=100
+redis.cluster.max.idle=20
+redis.cluster.min.idle=10
+redis.cluster.timeout=2000
+redis.cluster.maxAttempts=100
+redis.cluster.redisDefaultExpiration=3600
+redis.cluster.usePrefix=true
+redis.cluster.blockWhenExhausted=true
+redis.cluster.maxWaitMillis=3000
+redis.cluster.testOnBorrow=false
+redis.cluster.testOnReturn=false
+redis.cluster.testWhileIdle=true
+redis.cluster.minEvictableIdleTimeMillis=60000
+redis.cluster.timeBetweenEvictionRunsMillis=30000
+redis.cluster.numTestsPerEvictionRun=-1
+redis.cluster.defaultExpirationKey=defaultExpirationKey
+redis.cluster.expirationSecondTime=300
+redis.cluster.preloadSecondTime=280
+
+
+redis.cluster.node.one=10.2.2.2
+redis.cluster.node.one.port=7001
+
+redis.cluster.node.two=10.2.2.2
+redis.cluster.node.two.port=7002
+
+redis.cluster.node.three=10.2.2.2
+redis.cluster.node.three.port=7003
+
+redis.cluster.node.four=10.2.2.2
+redis.cluster.node.four.port=7004
+
+redis.cluster.node.five=10.2.2.2
+redis.cluster.node.five.port=7005
+
+redis.cluster.node.six=10.2.2.2
+redis.cluster.node.six.port=7006
+
+redis.cluster.node.seven=10.2.2.2
+redis.cluster.node.seven.port=7006
