--- a/mykit-wechat-config/pom.xml
+++ b/mykit-wechat-config/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>mykit-wechat-sdk</artifactId>
         <groupId>io.mykit.wechat.sdk</groupId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>mykit-wechat-config</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
 
 
 </project>
