添加微信客服消息

--- a/mykit-wechat-config/src/main/resources/params.properties
+++ b/mykit-wechat-config/src/main/resources/params.properties
@@ -26,6 +26,8 @@ weixin.kfaccount.del=https://api.weixin.qq.com/customservice/kfaccount/del
 weixin.kfaccount.uploadheadimg=http://api.weixin.qq.com/customservice/kfaccount/uploadheadimg
 #获取所有客服账号
 weixin.kfaccount.getkflist=https://api.weixin.qq.com/cgi-bin/customservice/getkflist
+#发送客服消息
+weixin.kfaccount.message=https://api.weixin.qq.com/cgi-bin/message/custom/send
 #上传图文消息内的图片获取URL
 weixin.group.uploadimg=https://api.weixin.qq.com/cgi-bin/media/uploadimg
 #上传多媒体文件
