--- a/mykit-wechat-cache/src/main/resources/redis.properties
+++ b/mykit-wechat-cache/src/main/resources/redis.properties
@@ -28,6 +28,7 @@ redis.cluster.expirationSecondTime=300
 redis.cluster.preloadSecondTime=280
 
 
+# test env
 redis.cluster.node.one=10.2.2.231
 redis.cluster.node.one.port=7001
 
@@ -48,3 +49,25 @@ redis.cluster.node.six.port=7006
 
 redis.cluster.node.seven=10.2.2.231
 redis.cluster.node.seven.port=7006
+
+# virsual env
+#redis.cluster.node.one=192.168.175.151
+#redis.cluster.node.one.port=7001
+#
+#redis.cluster.node.two=192.168.175.151
+#redis.cluster.node.two.port=7002
+#
+#redis.cluster.node.three=192.168.175.151
+#redis.cluster.node.three.port=7003
+#
+#redis.cluster.node.four=192.168.175.151
+#redis.cluster.node.four.port=7004
+#
+#redis.cluster.node.five=192.168.175.151
+#redis.cluster.node.five.port=7005
+#
+#redis.cluster.node.six=192.168.175.151
+#redis.cluster.node.six.port=7006
+#
+#redis.cluster.node.seven=192.168.175.151
+#redis.cluster.node.seven.port=7006
